# rapidmesh

./: .gitignore  Cargo.toml  DESIGN-brep.md  DESIGN.md  README.md
.github/workflows/: pages.yml  publish.yml
bench/: REPORT.md  compare_meshers.py  fetch_models.py  report.py
crates/rapidmesh/: Cargo.toml
crates/rapidmesh-brep/: Cargo.toml
crates/rapidmesh-brep/src/: build.rs  chart.rs  lib.rs  surface.rs  topology.rs
crates/rapidmesh-brep/tests/: build.rs
crates/rapidmesh-csg/: Cargo.toml
crates/rapidmesh-csg/src/: arrange.rs  boolean.rs  classify.rs  constraint.rs  facet.rs  lib.rs  planar.rs  pool.rs  tri.rs  tri_tri.rs  triangulate.rs
crates/rapidmesh-csg/tests/: arrange.rs  boolean.rs  planar.rs  tri_tri.rs  triangulate.rs
crates/rapidmesh-csg/tests/common/: mod.rs
crates/rapidmesh-exact/: Cargo.toml
crates/rapidmesh-exact/src/: expansion.rs  geom.rs  interval.rs  lib.rs  log.rs  order.rs  orient.rs  point.rs  ring.rs  stats.rs
crates/rapidmesh-exact/tests/: exactness.rs  order.rs
crates/rapidmesh-geom/: Cargo.toml
crates/rapidmesh-geom/src/: faceted.rs  import.rs  lib.rs  nurbs.rs  nurbs_surface.rs  plc.rs  polygon.rs  prim.rs  scene.rs  vec3.rs
crates/rapidmesh-geom/tests/: debug_coax.rs  import.rs  prim.rs  scene.rs
crates/rapidmesh-testutil/: Cargo.toml
crates/rapidmesh-testutil/src/: lib.rs
crates/rapidmesh-tet/: Cargo.toml
crates/rapidmesh-tet/examples/: grading_bench.rs
crates/rapidmesh-tet/src/: adapt.rs  brep_mesh.rs  cdt.rs  cdt3.rs  conform.rs  constants.rs  curve.rs  cvt.rs  delaunay.rs  diagnostics.rs  domain.rs  facetbvh.rs  geomutil.rs  lib.rs  mom.rs  optimize.rs  project.rs  quadfield.rs  recover.rs  seed.rs  site.rs  sizefield.rs  spatial.rs  surf2d.rs  surfchart.rs
crates/rapidmesh-tet/tests/: conform.rs  delaunay.rs  face_recovery.rs  segment_recovery.rs  spike_cvt.rs
crates/rapidmesh-topo/: Cargo.toml  DESIGN.md
crates/rapidmesh-topo/src/: bundle.rs  convention.rs  csr.rs  lib.rs  math.rs  mesher.rs  source.rs  tet.rs  tri.rs  wire.rs
crates/rapidmesh-wasm/: Cargo.toml  build.sh
crates/rapidmesh-wasm/src/: lib.rs
crates/rapidmesh/examples/: analyze_caps.rs  bench.rs  diag_dense.rs  measure_density.rs  profile_gw.rs  repro_horn.rs  repro_patch_antenna.rs  repro_patch_feed.rs  repro_resonator.rs  repro_tee.rs  repro_torus.rs  repro_trace_sizing.rs
crates/rapidmesh/src/: export.rs  lib.rs  scenes.rs
docs/: cdt-recovery-plan.md  conformal-tessellation-plan.md  face-recovery-perf-plan.md  per-region-meshing-plan.md  seam-baseline.md
docs/archive/: face-recovery-perf-plan.md
notes/: bestandsaufnahme.md  unified-mesher-plan.md
python/: .gitignore  Cargo.toml  README.md  pyproject.toml
python/examples/: _quality.py  bench_facets.py  compare_geoms.py  compare_showcase.py  export_showcase.py  rapidfem_geometries.py  showcase.py  surface_export.py
python/examples/fixtures/: blob.stl  bunny.stl
python/python_src/rapidmesh/: __init__.py  _viewer.py  adapt.py  geometry.py
python/python_src/rapidmesh/_viewer_dist/: embed.html  index.html
python/python_src/rapidmesh/_viewer_dist/_app/: version.json
python/python_src/rapidmesh/_viewer_dist/_app/immutable/assets/: 0.DEfqRxCS.css  2.DnOTHUGA.css  3.Xs8ZBo3w.css  mesh_adapter.B9NZGrT6.css
python/python_src/rapidmesh/_viewer_dist/_app/immutable/chunks/: BK8y7x8W.js  BOPYnjrv.js  BSD18LTc.js  B_GWc18_.js  BcvqPQud.js  Bf0fLlLH.js  BjxJUwdQ.js  DBBtxCs2.js  vHmUQCYJ.js
python/python_src/rapidmesh/_viewer_dist/_app/immutable/entry/: app.CivnoCWR.js  start.CNjz9S71.js
python/python_src/rapidmesh/_viewer_dist/_app/immutable/nodes/: 0.CjUBwPHZ.js  1.l68x9D7Z.js  2.CwLt0sr7.js  3.CPSCvWAd.js
python/src/: lib.rs
python/tests/: test_sizing.py
report/: .gitignore  _genreport.py  _maketable.py  algorithm.tex  corpus.py  passives_fixtures.json  references.bib  render_gallery.py  render_passives.py  report.tex  sync_viewer_dist.py  validate.py  viewer.py
report/derivations/: cdt2d.py  quality_pipeline.py
report/notes/: pathA-validation.md
report/render-node/: build-bundle.mjs  entry.ts  gallery_driver.py  package-lock.json  package.json  rasterize.mjs
report/validation/: benchmark_cdt.json  quality_table.tex  results.json
site/: README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
site/scripts/: extract-wordmark.mjs
site/src/: app.css  app.html
site/src/lib/: api.ts  constants.ts  mesh_adapter.ts  mesh_types.ts  msh.ts  theme.ts  viewbus.ts  wordmark.ts
site/src/lib/components/: MeshViewer.svelte
site/src/lib/render/: canvas3d.ts  canvas3d_webgpu.ts  mesh_scene.ts  scene_build.ts  webgpu_shaders.ts
site/src/routes/: +layout.ts  +page.svelte
site/src/routes/embed/: +page.svelte
site/static/: CNAME
site/static/meshes/: baffled_tank.json  bearing.json  bracket.json  chain.json  coax.json  coax_step.json  counterbore_plate.json  dice.json  gear.json  iris.json  laminate.json  lattice_cube.json  manifest.json  microstrip.json  mold_block.json  orbs.json  perforated_plate.json  pipe_cross.json  rocket.json  serpentine.json  sizing_field.json  spring.json  square_to_round.json  wr90.json
site/static/meshes/compare/: blob.gmsh.json  blob.rapidmesh.json  blob.tetgen.json  box.gmsh.json  box.rapidmesh.json  box.tetgen.json  bracket.gmsh.json  bracket.rapidmesh.json  bracket.tetgen.json  bunny.gmsh.json  bunny.rapidmesh.json  bunny.tetgen.json  capsule.gmsh.json  capsule.rapidmesh.json  capsule.tetgen.json  cone.gmsh.json  cone.rapidmesh.json  cone.tetgen.json  core_shell.gmsh.json  core_shell.rapidmesh.json  core_shell.tetgen.json  cylinder.gmsh.json  cylinder.rapidmesh.json  cylinder.tetgen.json  drilled_block.gmsh.json  drilled_block.rapidmesh.json  drilled_block.tetgen.json  fused_chain.gmsh.json  fused_chain.rapidmesh.json  (+50 more)
site/static/wasm/: rapidmesh_wasm.js  rapidmesh_wasm_bg.wasm
viewer/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
viewer/src/: App.svelte  app.css  canvas3d.ts  main.ts  theme.ts
viewer/src/lib/: mesh_types.ts  theme.ts  tooltip.ts  viewbus.ts
(+3 files in other folders)
