[workspace]
resolver = "2"
members = [
    "crates/rapidmesh-exact",
    "crates/rapidmesh-geom",
    "crates/rapidmesh-csg",
    "crates/rapidmesh-brep",
    "crates/rapidmesh-tet",
    "crates/rapidmesh",
    "crates/rapidmesh-testutil",
]

[workspace.package]
version = "0.2.1"
edition = "2021"
publish = false
license = "MIT"

[workspace.dependencies]
rapidmesh-exact = { path = "crates/rapidmesh-exact" }
rapidmesh-geom = { path = "crates/rapidmesh-geom" }
rapidmesh-testutil = { path = "crates/rapidmesh-testutil" }
rapidmesh-csg = { path = "crates/rapidmesh-csg" }
rapidmesh-brep = { path = "crates/rapidmesh-brep" }
rapidmesh-tet = { path = "crates/rapidmesh-tet" }
geometry-predicates = "0.3"
rayon = "1"
rustc-hash = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
