[package]
name = "rapidmesh-brep"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
rapidmesh-exact.workspace = true
rapidmesh-geom.workspace = true
rapidmesh-csg.workspace = true
rustc-hash.workspace = true

[dev-dependencies]
rapidmesh-testutil.workspace = true
