[package]
name = "rapidmesh-topo"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Analysis-ready cell-complex view of a mesh (incidence + element geometry), 2D and 3D, optimized for FEM/MoM embedding."

[features]
default = []
# Source adapters for the rapidmesh mesher's own output types. Off by default so
# the core (topology + geometry, std-only) builds standalone for external meshes.
mesher = ["dep:rapidmesh-tet", "dep:rapidmesh-geom"]

[dependencies]
bytemuck = { version = "1", features = ["extern_crate_alloc", "min_const_generics"] }
rapidmesh-tet = { workspace = true, optional = true }
rapidmesh-geom = { workspace = true, optional = true }
