[package]
name = "rapidmesh"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
rapidmesh-geom.workspace = true
rapidmesh-csg.workspace = true
rapidmesh-tet.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
rapidmesh-exact.workspace = true
